form and overflow correction

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ body {
   font-family: 'Lato', sans-serif;
   color: #333;
   line-height: 1.6;
+  overflow-x: hidden;
 }
 
 ul {
